# RealtimeGUI

./: .gitignore  CLAUDE.md  README.md  current_goal.md  current_goat.md  osworld_results.csv  run_ab.sh  skills-lock.json  复现.md  复现_LLM.md  复现_debug_plan.md  复现_debug_串行.md  复现_debug_单任务.md  复现_debug_并行.md  复现_debug_评测器修复.md  复现_作废重跑.md
Agent/: pyproject.toml
Agent/docs/holo_official/: about-the-models-api.md  agent-loop.md  api-reference.md  element-localization.md  quickstart.md
Agent/holo_agent/: __init__.py  agent.py  recorder.py  report.py  tools.py
Env/: pyproject.toml
Env/OSWorld/: auth_gdrive.py
Env/OSWorld/desktop_env/controllers/: setup.py
Env/OSWorld/desktop_env/evaluators/getters/: chrome.py
Env/OSWorld/desktop_env/providers/docker/: provider.py
Env/OSWorld/evaluation_examples/: ab_subset.json  geocheck.json
Env/OSWorld/holo_repro/: ab_baseline.json  backfill_meta.py  compare_ab.py  compare_multi.py  debug_one.py  debug_parallel.py  debug_serial.py  gen_reports.py  invalidate.py  osworld_computer_env.py  prefetch_cache.py  proxy_relay.py  run_holo.py  run_multi.py  sample_report_dnd.html  serve_public.sh  serve_vllm.sh
Env/OSWorld/vllm_logs/: holo_api_key.txt  serve_vllm.pids
Env/RealtimeGym/configs/: example-gemini-2.5-flash-reactive.yaml  example-gpt-5-mini-reactive.yaml
Env/RealtimeGym/src/realtimegym/: game_computer_env.py  gui_eval.py  io_layer.py  play_human.py  recorder.py
Env/RealtimeGym/tests/: test_holo_loop.py  test_io_layer.py  test_osworld_adapter.py
Env/computer_env/: __init__.py  core.py
(+3 files in other folders)
